# ona-auditlog

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.ona/: automations.yaml
src/ona_auditlog/: __init__.py  cli.py  enrichment.py
tests/: test_cli.py
