[project]
name = "ona-auditlog"
version = "0.1.0"
description = "Demo app that polls Ona audit logs and writes received events to stdout."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpod-sdk>=0.10.0",
]

[project.scripts]
ona-auditlog = "ona_auditlog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ona_auditlog"]
